# SuperComputer

./: .env.local.example  .gitignore  .hermes-ts  CONTRIBUTORS.md  Dockerfile  README.md  next.config.ts  nixpacks.toml  package.json  pyproject.toml  requirements.txt  setup.py  tsconfig.json
.github/workflows/: ci.yml  publish.yml
config/: config.yaml  default.yaml
deploy/: supercompute-backup.service  supercompute-backup.timer  supercompute-keeper.service
docs/: CHANGELOG.md  engineering-plan.md
examples/: adaptive_demo.py  hello_world.py
history/: 2024-01.md  2024-02.md  2024-03.md  2024-04.md  2024-05.md  2024-06.md  2024-07.md  2024-08.md  2024-09.md  2024-10.md  2024-11.md  2024-12.md  2025-01.md  2025-02.md  2025-03.md  2025-04.md  2025-05.md  2025-06.md  2025-07.md  2025-08.md  2025-09.md  2025-10.md  2025-11.md  2025-12.md  2026-01.md  2026-02.md  2026-03.md  2026-04.md  2026-05.md  2026-06.md
lib/: config.ts  db.ts  image-gen.ts  types.ts
lib/keeper/: index.ts
lib/orchestrator/: index.ts
scripts/: backfill-commits.sh  backup-db.ts  build.sh  keeper.ts  push-to-github.sh  release.sh  seed-db.ts
server/: index.ts  load-env.ts
supercompute/: config.py  log_setup.py
supercompute/api/: __init__.py  server.py
supercompute/core/: __init__.py  node.py  scheduler.py  task.py
supercompute/network/: __init__.py  rpc.py  transport.py
supercompute/observability/: logger.py  (+1 more)
tests/: benchmark.py  test_all.py  test_core.py  test_queue.py  test_runtime.py  test_scheduler.py
worker/: README.md  package-lock.json  package.json  tsconfig.json
(+9 files in other folders)
