[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supercompute"
version = "0.1.0"
description = "A distributed compute scheduling system with fault-tolerant task execution"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "httpx>=0.24",
]

[project.scripts]
supercompute = "supercompute.cli:cli"

[tool.setuptools.packages.find]
include = ["supercompute*"]

[tool.pytest.ini_options]
testpaths = ["tests"]


